--- a/package.json
+++ b/package.json
@@ -3,27 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "cross-env  NODE_ENV=development && next dev",
+    "build": "cross-env NODE_ENV=production && next build",
+    "start": "cross-env NODE_ENV=test && next start",
     "lint": "next lint",
     "docs": "jsdoc -c jsdoc.conf.json"
   },
   "dependencies": {
-    "better-docs": "^2.7.3",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.57.0",
     "eslint-config-next": "15.0.0-rc.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
     "jsdoc": "^4.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.1.0"
   }
 }
