--- a/package.json
+++ b/package.json
@@ -15,9 +15,19 @@
     "cypress:start": "start-server-and-test 'npm run start:test' 3000 'npm run cypress:open'  "
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.1",
+    "@clerk/themes": "^2.1.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.3.28",
+    "lucide-react": "^0.428.0",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522"
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
