Install frontend dependencies ( Shadcnn clerk, framer motion, react toast , react icons )

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_SERVER_URL=
 NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bW9kZWwtbW9uc3Rlci05LmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_OwFQ1Cs79FpGuNjiCcS3WpyzCWvWrZqHTdZaKd1va4
