--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@clerk/testing": "^1.2.10",
     "@eslint/js": "^9.9.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^20",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "babel-jest": "^29.7.0",
+    "better-docs": "^2.7.3",
     "cross-env": "^7.0.3",
     "cypress": "^13.13.3",
     "eslint": "^8.57.0",
