--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-instantsearch": "^7.12.4",
+    "react-number-format": "^5.4.0",
     "react-spinners": "^0.14.1",
     "swiper": "^11.1.9",
     "tailwind-merge": "^2.5.2",
