--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
     "@clerk/themes": "^2.1.20",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@types/algoliasearch": "^4.0.0",
@@ -29,6 +33,7 @@
     "lucide-react": "^0.428.0",
     "next": "15.0.0-rc.0",
     "react": "19.0.0-rc-f994737d14-20240522",
+    "react-countdown": "^2.3.6",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
