--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@clerk/themes": "^2.1.20",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -32,6 +33,7 @@
     "algoliasearch": "^5.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.428.0",
     "next": "15.0.0-rc.0",
@@ -41,11 +43,13 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-instantsearch": "^7.12.4",
+    "react-medium-image-zoom": "^5.2.8",
     "react-number-format": "^5.4.0",
     "react-spinners": "^0.14.1",
     "swiper": "^11.1.9",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
