--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
     "@clerk/themes": "^2.1.20",
+    "@clerk/types": "^4.14.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@paypal/react-paypal-js": "^8.5.0",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -29,6 +32,10 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.3.0",
+    "@tanstack/react-table": "^8.20.5",
     "@types/algoliasearch": "^4.0.0",
     "algoliasearch": "^5.0.0",
     "class-variance-authority": "^0.7.0",
@@ -37,6 +44,7 @@
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.428.0",
     "next": "15.0.0-rc.0",
+    "proxy-memoize": "^3.0.1",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-countdown": "^2.3.6",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
@@ -45,7 +53,10 @@
     "react-instantsearch": "^7.12.4",
     "react-medium-image-zoom": "^5.2.8",
     "react-number-format": "^5.4.0",
+    "react-redux": "^9.1.2",
     "react-spinners": "^0.14.1",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "swiper": "^11.1.9",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
