--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "cross-env  NODE_ENV=development && next dev",
     "build": "cross-env NODE_ENV=production && next build",
     "start": "cross-env NODE_ENV=test && next start",
-    "lint": "next lint",
+    "lint": "next lint & eslint & tsc",
     "docs": "jsdoc -c jsdoc.conf.json",
     "test": "jest",
     "test:watch": "jest --watch",
