--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "caldera",
   "version": "0.1.0",
   "private": true,
@@ -6,9 +7,8 @@
     "dev": "cross-env  NODE_ENV=development && next dev",
     "build": "cross-env NODE_ENV=production && next build",
     "start": "cross-env NODE_ENV=test && next start",
-    "lint": "next lint & eslint & tsc",
-    "docs": "jsdoc -c jsdoc.conf.json",
-    "test": "jest",
+    "lint": "next lint",
+    "test": "cross-env NODE_ENV=testing  jest",
     "test:watch": "jest --watch",
     "start:test": "cross-env NODE_ENV=test && next build && next start",
     "cypress:open": "cross-env NODE_ENV=test cypress open",
@@ -43,11 +43,11 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.428.0",
-    "next": "15.0.0-rc.0",
+    "next": "14.2.5",
     "proxy-memoize": "^3.0.1",
-    "react": "19.0.0-rc-f994737d14-20240522",
+    "react": "^18",
+    "react-dom": "^18",
     "react-countdown": "^2.3.6",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-instantsearch": "^7.12.4",
@@ -65,6 +65,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.24.8",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
@@ -78,7 +79,6 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.4",
     "babel-jest": "^29.7.0",
-    "better-docs": "^2.7.3",
     "cross-env": "^7.0.3",
     "cypress": "^13.13.3",
     "eslint": "^8.57.0",
@@ -91,6 +91,7 @@
     "postcss": "^8",
     "start-server-and-test": "^2.0.5",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5",
     "typescript-eslint": "^8.1.0"
