--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/components/*": ["./components/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.tsx", ".next/types/**/*.ts", "_tests_/ui/home.test.js", "cypress/tsconfig.json", "providers/AlgoliaProvider.jsx"],
