--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@stripe/stripe-js": "^4.3.0",
     "@tanstack/react-table": "^8.20.5",
     "@types/algoliasearch": "^4.0.0",
+    "@vercel/analytics": "^1.3.1",
     "algoliasearch": "^5.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -46,8 +47,8 @@
     "next": "14.2.5",
     "proxy-memoize": "^3.0.1",
     "react": "^18",
-    "react-dom": "^18",
     "react-countdown": "^2.3.6",
+    "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-instantsearch": "^7.12.4",
