--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "proxy-memoize": "^3.0.1",
+    "randomstring": "^1.3.0",
     "react": "^18",
     "react-countdown": "^2.3.6",
     "react-dom": "^18",
