--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "type": "module",
+  "type": "commonjs",
   "name": "caldera",
   "version": "0.1.0",
   "private": true,
@@ -46,6 +46,8 @@
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "proxy-memoize": "^3.0.1",
+    "random-email": "^1.0.3",
+    "random-email-password": "^1.0.1",
     "randomstring": "^1.3.0",
     "react": "^18",
     "react-countdown": "^2.3.6",
@@ -71,7 +73,7 @@
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
-    "@clerk/testing": "^1.2.10",
+    "@clerk/testing": "^1.2.15",
     "@eslint/js": "^9.9.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
@@ -90,6 +92,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdoc": "^4.0.3",
+    "next-test-api-route-handler": "^4.0.8",
     "postcss": "^8",
     "start-server-and-test": "^2.0.5",
     "tailwindcss": "^3.4.1",
