--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,10 @@
 NEXT_PUBLIC_SERVER_URL=https://fractal-mu-lac.vercel.app
+NEXT_PUBLIC_API_URL=https://fractal-api.vercel.app
 
+#CLERK INTEGRATION
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 
-NEXT_PUBLIC_API_URL=https://fractal-api.vercel.app
-
+#STRIPE INTEGRATION
 NEXT_PUBLIC_STRIPE_CLIENT_KEY=
 STRIPE_SECRET_KEY=
