--- a/.env.development
+++ b/.env.development
@@ -4,11 +4,10 @@ NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 #API URL
 NEXT_PUBLIC_API_URL=https://fractal-api-zeta.vercel.app
 
-
-# Clerk integration 
+# Clerk integration: Watch the video on patreon or youtube if you need help 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 
-# Stripe integration 
+# Stripe integration: Watch the video on patreon or youtube if you need help
 NEXT_PUBLIC_STRIPE_CLIENT_KEY=
 STRIPE_SECRET_KEY=
